cart-service/cart-service-role.yml
##################################################################################################
# Cart service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: cartservice
    service: cartservice
spec:
  ports:
    - port: 7070
      name: http
  selector:
    app: cartservice
---
apiVersion: v1
kind: Deployment
metadata:
  name: cart-service
  labels:
    app: cartservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
      version: v1
  template:
    metadata:
      labels:
        app: cartservice
        version: v1
    spec:
      serviceAccountName: cart-app
      containers:
        - name: cartservice
          image: docker.io/biswabhusan/cart-service:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7070
